--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+.hero{
+  font-family: 'Exo', sans-serif;
+ 
+}
+
 .bg-clip-text {
         -webkit-background-clip: text;
         background-clip: text;
